# smartdns-rs

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DETAILED_CODE_ANALYSIS.md  IMPROVEMENT_SUGGESTIONS.md  README.md  README_en-US.md  README_zh-CN.md  RESOLVE_EXAMPLES.txt  TODO.md  build.rs  justfile  localhost.crt  localhost.key  replay.sh  swagger-ui.html  vibe-coding.sh  wix.wxs
.github/: dependabot.yml
.github/actions/sanitize-label/: action.yml
.github/actions/setup/: action.yml
.github/actions/setup.yml/: action.yml
.github/workflows/: build.yml  nightly.yml  perf.yml  release.yml  test.yml  version.yml  wfcleanup.yml
contrib/docker/: Dockerfile  docker-compose.yml
contrib/openwrt/: Makefile
contrib/openwrt/conf/: smartdns.conf  smartdns.init
contrib/perf/: README.md  compare_perf.py  run_perf_suite.py
docker/: .gitignore  Dockerfile  docker-entrypoint.sh  pihole-to-smartdns.sh
etc/smartdns/: smartdns-dev.conf  smartdns.conf
include/: nftset.c  nftset.h
patches/: hickory-proto+0.24.0.patch  hickory-server+0.24.0.patch
scripts/: fetch-geo-testdata.sh
src/: app.rs  cli.rs  collections.rs  dns.rs  dns_client.rs  dns_conf.rs  dns_error.rs  dns_mw.rs  dns_mw_addr.rs  dns_mw_audit.rs  dns_mw_bogus.rs  dns_mw_cache.rs  dns_mw_cname.rs  dns_mw_dns64.rs  dns_mw_dnsmasq.rs  dns_mw_dualstack.rs  dns_mw_hosts.rs  dns_mw_nftset.rs  dns_mw_ns.rs  dns_mw_spdt.rs  dns_mw_zone.rs  dns_rule.rs  dns_server.rs  dns_url.rs  dnsmasq.rs  error.rs  fast_ping.rs  file_watcher.rs  libdns.rs  log.rs  main.rs  matcher.rs  preset_ns.rs  proxy.rs  resolver.rs  rustls.rs  service.rs  trust_dns.rs  update.rs  updater.rs
src/api/: address.rs  audit.rs  cache.rs  config.rs  forward.rs  listener.rs  log.rs  mod.rs  nameserver.rs  openapi.rs  serve_dns.rs  settings.rs  system.rs
src/config/: audit.rs  bind_addr.rs  cache.rs  client_rule.rs  domain.rs  domain_rule.rs  domain_set.rs  geodata.rs  ip_set.rs  listener.rs  log.rs  mod.rs  nameserver.rs  response_mode.rs  rule_group.rs  server_opts.rs  speed_mode.rs
src/config/parser/: address_rule.rs  bind_addr.rs  bool.rs  bytes.rs  client_rule.rs  cname.rs  config_for_domain.rs  config_item.rs  domain.rs  domain_config_item.rs  domain_policy.rs  domain_rule.rs  domain_set.rs  domain_set_provider.rs  file_mode.rs  forward_rule.rs  glob_pattern.rs  https_record.rs  ip_alias.rs  ip_config_ntset.rs  ip_net.rs  ip_set.rs  ipnet.rs  iporset.rs  line.rs  listener.rs  log_level.rs  mod.rs  nameserver.rs  nftset.rs  options.rs  path.rs  proxy_config.rs  record_type.rs  response_mode.rs  speed_mode.rs  srv.rs  svcb.rs
src/config/parser/nom_recipes/: ip.rs  ipv4.rs  ipv6.rs  mac_addr.rs  mod.rs
src/ffi/: mod.rs  nft.rs  nftset.rs  nftset_sys.rs
src/infra/: arp.rs  dhcp.rs  file_mode.rs  http_client.rs  ipset.rs  mapped_file.rs  mem_bytes.rs  middleware.rs  mod.rs  os_release.rs  ping.rs  process_guard.rs
src/libdns/: bridge.rs  mod.rs
src/libdns/custom/: connection_provider.rs  mod.rs  warmup.rs
src/server/: h3.rs  http.rs  https.rs  mod.rs  net.rs  quic.rs  tcp.rs  tls.rs  udp.rs
src/server/legacy/: dns_server.rs  mod.rs
src/service/: installer.rs  mod.rs  service_manager.rs
src/service/linux/: mod.rs
src/service/linux/initd/: mod.rs
src/service/linux/initd/debian/: mod.rs
src/service/linux/initd/debian/files/etc/init.d/: smartdns-rs
src/service/linux/initd/openwrt/: mod.rs
src/service/linux/initd/openwrt/files/etc/init.d/: smartdns-rs
src/service/linux/initd/others/: mod.rs
src/service/linux/runit/: mod.rs
src/service/linux/systemd/: mod.rs
src/service/linux/systemd/files/lib/systemd/system/: smartdns-rs.service
src/service/macos/: brew.rs  launchctl.rs  mod.rs
src/service/windows/: mod.rs  shell_escape.rs  windows_service.rs
src/third_ext/: default.rs  future.rs  hash.rs  ip_addr_to_arpa.rs  mod.rs  num.rs  path.rs  serde.rs  serde_ext.rs  slice.rs
src/trust_dns/: mod.rs
src/zone/: manager.rs  mod.rs  provider.rs
src/zone/providers/: identity.rs  local_ptr.rs  mod.rs  rule.rs
tests/example/: adblock.conf  address.conf  ads-list.txt  custom.conf  server.conf  smartdns.conf
tests/test_confs/: a_addr.conf  a_server.conf  b_main.conf
tests/test_data/: a_main.conf  b_addr.conf  b_main.conf  b_server.conf  block-list.txt  cf-ipv6.txt  dhcp.leases
tests/test_data/hosts/: a1.hosts  a2.hosts  b.hosts
