[package]
name = "smartdns"
version = "0.8.5"
authors = ["YISH <mokeyish@hotmail.com>"]
edition = "2021"
rust-version = "1.75.0"

keywords = ["DNS", "BIND", "dig", "named", "dnssec", "SmartDNS", "Dnsmasq"]
categories = ["network-programming"]

description = """
A cross platform local DNS server written in rust to obtain the fastest website IP for the best Internet experience, support DoT, DoQ, DoH, DoH3.
"""

homepage = "https://github.com/mokeyish/smartdns-rs"
repository = "https://github.com/mokeyish/smartdns-rs"
license = "GPL-v3.0"
readme = "README.md"

[package.metadata.patch]
# crates = ["hickory-server", "hickory-proto"]

[features]

default = ["dns-over-tls", "dns-over-https", "dns-over-quic", "dns-over-h3", "dnssec", "service", "nft", "self-update" ]

homebrew = ["dns-over-tls", "dns-over-https", "dns-over-quic", "dns-over-h3", "dnssec", "service", "nft" ]

failed_tests = []
disable_icmp_ping = []
self-update = ["dep:self_update"]

dns-over-tls = []
dns-over-https = ["dns-over-https-rustls"]
dns-over-quic = [
  "hickory-proto/dns-over-quic",
  "hickory-resolver/dns-over-quic",
  "hickory-server/dns-over-quic"
]
dns-over-h3 = [
  "hickory-proto/dns-over-h3",
  "hickory-resolver/dns-over-h3"
]

dns-over-https-rustls = [
  "hickory-proto/dns-over-https-rustls",
  "hickory-resolver/dns-over-https-rustls",
  "hickory-server/dns-over-https-rustls",
]

service = [
  "dep:which",
  "dep:self-replace", "dep:same-file" # windows self_delete
]

nft = ["dep:which", "dep:either"]

dnssec = ["hickory-proto/dnssec"]

legacy_dns_server = ["dep:hickory-server"]

experimental = ["experimental-trie", "experimental-phf"]

experimental-trie = []
experimental-phf = [
  "dep:boomphf"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
# rustls = { git = "https://github.com/mokeyish/rustls.git", branch = "patched_main"}
# hickory-resolver = { git = "https://github.com/hickory-dns/hickory-dns.git", rev = "41b6e33"}
# hickory-server = { path = "./target/patch/hickory-server-0.24.0" }
# hickory-proto = { path = "./target/patch/hickory-proto-0.24.0" }
# rustls-native-certs = { git = "https://github.com/mokeyish/rustls-native-certs.git" }
hostname = { git = "https://github.com/mokeyish/hostname.git", branch = "dev" }
# enum_dispatch = { git = "https://gitlab.com/mokeyish/enum_dispatch.git", branch = "master"}
# axum = { git = "https://github.com/tokio-rs/axum.git", rev = "8854e66" }
# boomphf ={ path = "./target/patch/boomphf-0.6.0"}

[dependencies]
cfg-if = "1"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.16.0"
nom = "7.1.3"
enum_dispatch = "0.3.13"
bytes = "1.6.0"
either = { version = "1.12.0", optional = true }


# api
axum = { version = "0.7.5" }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }

# serde
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
serde_json = "1.0"

# async/await
futures = { version = "0.3.5", default-features = false, features = ["std"] }
futures-intrusive = "0.5"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-trait = "0.1.80"
tokio = { version = "1.28", features = [
  "time",
  "rt",
  "signal",
  "macros",
  "parking_lot",
] }
tokio-rustls = "0.24.0"
tokio-util = "0.7.10"
socket2 = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

# log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "std",
  "fmt",
  "env-filter",
] }
# tracing-appender = "0.2"

# hickory dns
hickory-proto = { git = "https://github.com/mokeyish/hickory-dns.git", rev = "0.25.0-smartdns.2", version = "0.25.0-alpha.1", features = ["serde-config"]}
hickory-resolver = { git = "https://github.com/mokeyish/hickory-dns.git", rev = "0.25.0-smartdns.2", version = "0.25.0-alpha.1", features = [
  "serde-config",
  "system-config",
] }
hickory-server = { git = "https://github.com/mokeyish/hickory-dns.git", rev = "0.25.0-smartdns.2", version = "0.25.0-alpha.1", features = ["resolver"], optional = true }

# ssl
webpki-roots = "0.25.2"
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
rustls-native-certs = "0.6.2"

lru = { version = "0.12", default-features = false }
# time = "0.3"
chrono = { version = "0.4.38", features = ["serde"]}
surge-ping = "0.8.1"
rand = "0.8.5"
smallvec = "1.10.0"
csv = "1.1"
hostname = "0.3"
byte-unit = { version = "5.0.3", features = ["serde"]}
ipnet = "2.7"
which = { version = "6.0.1", optional = true }
glob = "0.3.1"

# process
sysinfo = "0.29"

# proxy
async-socks5 = { version = "0.6.0", git = "https://github.com/mokeyish/async-socks5.git", rev = "f78eec5" }
async-http-proxy = { version = "1.2.5", features = [
  "runtime-tokio",
  "basic-auth",
] }

num-traits = "0.2.19"
url = "2.5.2"
# regex = "1"
# rnp = "0.1"
boomphf = { version = "0.6.0", optional = true }
local-ip-address = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
users = { version = "0.11", default-features = false }
caps = "0.5.5"
self_update = { version = "0.40.0", default-features = false, features=["archive-tar", "compression-flate2", "rustls"], optional = true }

[target.'cfg(target_os = "android")'.dependencies]
self_update = { version = "0.40.0", default-features = false, features=["archive-tar", "compression-flate2", "rustls"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
self_update = { version = "0.40.0", default-features = false, features=["archive-zip", "compression-zip-deflate", "rustls"], optional = true }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.57", features = [
  "Win32_System_Console",
  "Win32_Foundation",
] }
windows-service = "0.7.0"
self_update = { version = "0.40.0", default-features = false, features=["archive-zip", "compression-zip-deflate", "rustls"], optional = true }
self-replace = { version = "1.3.7", optional = true }
same-file = { version = "1", optional = true }



[build-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }
chrono = "0.4.38"
anyhow = "1.0"


[target.'cfg(target_os = "linux")'.build-dependencies]
cc = "1.0"
bindgen = "0.69.4"


# Dev-dependencies are not used when compiling a package for building, but are used for compiling tests, examples, and benchmarks.
[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }


[profile.release]
# see: https://github.com/johnthagen/min-sized-rust
strip = true    # Automatically strip symbols from the binary.
opt-level = "z" # Optimize for size.
lto = true
codegen-units = 1
